--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,20 @@
 <nav>
-	<ul>
-		<li>
-			<a class="{% if page.url == '/' %}is-active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+	<a href="/" class="site-nav__home-link">
+		Logo
+	</a>
+
+	<a href="#trigger:nav" class="site-nav__open">Menu</a>
+	<a class="site-nav__target" id="trigger:nav"></a>
+
+	<ul class="site-nav__list">
+		<li class="site-nav__item  site-nav__item--close">
+			<a href="#0" class="site-nav__link site-nav__close">Close</a>
 		</li>
-		<li>
-			<a class="{% if page.url == '/about/' %}is-active{% endif %}" href="{{ site.baseurl }}/about/">About</a>
-		</li>
-		<li>
-			<a class="{% if page.url == '/data-example/' %}is-active{% endif %}" href="{{ site.baseurl }}/data-example/">Data Example</a>
-		</li>
-		<li>
-			<a class="{% if page.url == '/contact/' %}is-active{% endif %}" href="{{ site.baseurl }}/contact/">Contact</a>
-		</li>
+
+		{% for item in site.data.nav %}
+			<li class="site-nav__item">
+				<a class="site-nav__link {% if page.url == 'item.url' %}is-active{% endif %}" href="{{ site.baseurl }}{{ item.url }}">{{ item.name }}</a>
+			</li>
+		{% endfor %}
 	</ul>
 </nav>
