--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,10 @@
-<footer>
-	Copyright
-</footer>
+<footer class="footer {{page.color}}">
+	<section class="container">
+		<div class="row">
+			<div class="col-sm-12 footer-copyright text-center">
+				<i class="fa fa-copyright"></i> 2016 Vinci | design en code door
+				<a href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
+			</div>
+		</div><!-- /.row -->
+	</section><!-- /.container -->
+</footer><!-- /.footer -->
