--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,8 @@
-<footer class="footer {{page.color}}">
-	<section class="container">
-		<div class="row">
-			<div class="col-sm-12 footer-copyright text-center">
-				<i class="fa fa-copyright"></i> 2016 Vinci | design en code door
-				<a href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
-			</div>
-		</div><!-- /.row -->
-	</section><!-- /.container -->
+<footer class="footer l-footer">
+	<p class="l-container">
+		<small class="footer--copy">
+			<i class="fa fa-copyright"></i> 2016 Vinci | design en code door
+			<a href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
+		</small>
+	</p>
 </footer><!-- /.footer -->
