Add SVG logo's.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-	{% include nav.html %}
+	<img class="papa" src="img/vinci-koopgarantfonds-logo.svg">
 	<h1>{{ page.pagetitle }}</h1>
 </header>
