--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,4 @@
-<nav>
-	<a href="/" class="site-nav__home-link">
-		logos
-	</a>
-
+<nav class="site-nav">
 	<a href="#trigger:nav" class="site-nav__open">Menu</a>
 	<a class="site-nav__target" id="trigger:nav"></a>
 
