--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,18 @@
 <nav class="site-nav">
-	<a href="#trigger:nav" class="site-nav__open">Menu</a>
-	<a class="site-nav__target" id="trigger:nav"></a>
+	<div class="l-container">
+		<a href="#trigger:nav" class="site-nav__open">Menu</a>
+		<a class="site-nav__target" id="trigger:nav"></a>
 
-	<ul class="site-nav__list">
-		<li class="site-nav__item  site-nav__item--close">
-			<a href="#0" class="site-nav__link site-nav__close">Close</a>
-		</li>
-
-		{% for item in site.data.nav %}
-			<li class="site-nav__item">
-				<a class="site-nav__link {% if page.url == 'item.url' %}is-active{% endif %}" href="{{ site.baseurl }}{{ item.url }}">{{ item.name }}</a>
+		<ul class="site-nav__list">
+			<li class="site-nav__item  site-nav__item--close">
+				<a href="#0" class="site-nav__link site-nav__close">Close</a>
 			</li>
-		{% endfor %}
-	</ul>
+
+			{% for item in site.data.nav %}
+				<li class="site-nav__item">
+					<a class="site-nav__link {% if page.url == 'item.url' %}is-active{% endif %}" href="{{ site.baseurl }}{{ item.url }}">{{ item.name }}</a>
+				</li>
+			{% endfor %}
+		</ul>
+	</div>
 </nav>
