--- a/_src/scss/base/_page.scss
+++ b/_src/scss/base/_page.scss
@@ -1,12 +1,18 @@
+html {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+}
 body {
 	height: 100%;
 	color: $text-color;
-	font-size: 14px;
-	font-weight: 300;
+	font-size: 18px;
 	line-height: 1.56em;
 	letter-spacing: 1.3px;
 	background-color: $white;
 	background-repeat: no-repeat;
 	background-position: center bottom;
 	background-size: 100%;
+}
+a {
+	text-decoration: none;
 }
