--- a/_src/scss/layout/_site-nav.scss
+++ b/_src/scss/layout/_site-nav.scss
@@ -1,25 +1,26 @@
 .site-nav {
+	height: 50px;;
 	background-color: $yellow;
 }
 
 .site-nav__list {
-	list-style-type: none;
-	margin: 0;
-}
-.site-nav__item {
 	display: block;
-	font-weight: 400;
-}
-.site-nav__link {
-	color: $white;
-	line-height: 20px;
-	background-color: $orange;
-	padding: 10px 15px;
-}
-.site-nav__item--close {
-	display: none;
-}
+	list-style-type: none;
+	margin: 10px;
 
-.site-nav__open {
+	.site-nav__item {
+		display: block;
+		float: left;
+	}
+	.site-nav__link {
+		color: $white;
+		padding: 15px;
+		background-color: $orange;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 21px;
+	}
+}
+.site-nav__item--close, .site-nav__open {
 	display: none;
 }
