--- a/_src/scss/styles.scss
+++ b/_src/scss/styles.scss
@@ -5,6 +5,9 @@
 @import "variables/breakpoints";
 @import "variables/colors";
 
+// Tools
+@import "tools/mixins";
+
 // Base
 @import "base/page";
 @import "base/heading";
