--- a/_src/scss/base/_page.scss
+++ b/_src/scss/base/_page.scss
@@ -1,3 +1,14 @@
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
 html {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
@@ -13,6 +24,7 @@ body {
 	background-position: center bottom;
 	background-size: 100%;
 }
+
 a {
 	text-decoration: none;
 }
