--- a/_src/scss/layout/_l-grid.scss
+++ b/_src/scss/layout/_l-grid.scss
@@ -1,6 +1,7 @@
 .l-container {
 	max-width: $b-xlarge;
-  margin-left: auto;
-  margin-right: auto;
+  min-height: 1px;
+  margin: 0 auto;
   padding: 0 1em;
+  @include clearfix();
 }
