--- a/_src/scss/tools/_mixins.scss
+++ b/_src/scss/tools/_mixins.scss
@@ -1,15 +1,38 @@
+// Font weights by text.
 @mixin font-weight($font-weight) {
-
   @if ($font-weight == "thin") {
     font-weight: 300;
   }
-
 	@if ($font-weight == "regular") {
     font-weight: 400;
   }
-
   @if ($font-weight == "bold") {
     font-weight: 500;
   }
+}
 
+// Create all specified heading styles in one go.
+@mixin headings($from: 1, $to: 6) {
+  %base-heading {
+    @content;
+  }
+  @if $from >= 1 and $to <= 6{
+    @for $i from $from through $to{
+      h#{$i} {
+        @extend %base-heading;
+      }
+    }
+  }
+}
+
+// Clearfix
+@mixin clearfix() {
+  &:before,
+  &:after {
+    content: " "; // 1
+    display: table; // 2
+  }
+  &:after {
+    clear: both;
+  }
 }
