Update footer classes.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="footer l-footer">
-	<p class="l-container">
-		<small class="footer--copy">
+<footer class="footer">
+	<p class="l-container text-center">
+		<small class="footer__copy">
 			<i class="fa fa-copyright"></i> 2016 Vinci | design en code door
 			<a href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
 		</small>
