--- a/_src/scss/styles.scss
+++ b/_src/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "vendors/normalize";
 
 // Variables
-@import "variables/settings.global";
+@import "variables/settings";
 @import "variables/breakpoints";
 @import "variables/colors";
 
