--- a/_src/scss/layout/_footer.scss
+++ b/_src/scss/layout/_footer.scss
@@ -1,10 +1,12 @@
 .footer {
-	color: $white;
+	padding: $gutter-sm 0;
 	background-color: $red-purple;
 	@include gradient-horizontal-three-colors($purple, $red-purple, 20%, $red);
 
 	.footer__copy {
-		margin: $gutter-sm 0;
+		color: $white;
+		font-size: $font-size-base;
+		font-weight: $font-weight-normal;
 	}
 
 	.footer__link {
