--- a/_src/scss/variables/_settings.scss
+++ b/_src/scss/variables/_settings.scss
@@ -24,7 +24,8 @@ $font-weight-normal: 400 !default;
 $font-weight-bold: 500 !default;
 
 $font-weight-base: $font-weight-thin !default;
-$line-height-base: 1.5 !default;
+$line-height-base: 1.56 !default;
+$letter-spacing-base: 1.2px !default;
 
 $font-size-h1: 2.5rem !default;
 $font-size-h2: 2rem !default;
