Add footer link class.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<p class="l-container text-center">
 		<small class="footer__copy">
 			<i class="fa fa-copyright"></i> 2016 Vinci | design en code door
-			<a href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
+			<a class="footer__link" href="http://www.blockshot.org" rel="nofollow" target="_blank">Blockshot</a>
 		</small>
 	</p>
 </footer><!-- /.footer -->
