Update breakpoint variable names.

--- a/_src/scss/variables/_breakpoints.scss
+++ b/_src/scss/variables/_breakpoints.scss
@@ -1,4 +1,4 @@
-$b-small: 480px;
-$b-medium: 768px;
-$b-large: 960px;
-$b-xlarge: 1280px;
+$breakpoint-xs:	360px;
+$breakpoint-sm:	600px;
+$breakpoint-md:	950px;
+$breakpoint-lg:	1280px;
