--- a/_src/scss/layout/_site-nav.scss
+++ b/_src/scss/layout/_site-nav.scss
@@ -1,6 +1,6 @@
 .site-nav {
 	background-color: transparent;
-	border-bottom: 5px solid $yellow;
+	border-bottom: 5px solid $nav-link-color;
 }
 
 .site-nav__list {
@@ -16,7 +16,7 @@
 .site-nav__link {
 	display: block;
 	padding: 15px;
-	color: $yellow;
+	color: $nav-link-color;
 	font-size: 16px;
 	@include font-weight(regular);
 	line-height: 20px;
