Add font variables import.

--- a/_src/scss/styles.scss
+++ b/_src/scss/styles.scss
@@ -2,6 +2,7 @@
 @import "vendors/normalize";
 
 // Variables
+@import "variables/fonts";
 @import "variables/settings";
 @import "variables/breakpoints";
 @import "variables/colors";
