--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,5 +14,20 @@
 				</li>
 			{% endfor %}
 		</ul>
+
+		<section class="icon-nav">
+			<li class="icon-nav__item">
+				<a class="icon-nav__link" href="#"><i class="fa fa-phone"></i></a>
+			</li>
+			<li class="icon-nav__item">
+				<a class="icon-nav__link" href="#"><i class="fa fa-envelope"></i></a>
+			</li>
+			<li class="icon-nav__item">
+				<a class="icon-nav__link" href="#"><i class="fa fa-map-marker"></i></a>
+			</li>
+			<li class="icon-nav__item">
+				<a class="icon-nav__link" href="#"><i class="fa fa-search"></i></a>
+			</li>
+		</section>
 	</div>
 </nav>
