Changed to Juice preset breakpoints.

--- a/_src/scss/variables/_breakpoints.scss
+++ b/_src/scss/variables/_breakpoints.scss
@@ -1,4 +1,1 @@
-$breakpoint-xs:	360px;
-$breakpoint-sm:	600px;
-$breakpoint-md:	950px;
-$breakpoint-lg:	1280px;
+// See tools/mixins/juice for all the breakpoints.
