Update container max width.

--- a/_src/scss/variables/_settings.scss
+++ b/_src/scss/variables/_settings.scss
@@ -1,5 +1,9 @@
+// 2. Nav
+$nav-height: 50px;
 
 // 5. Grid
+$container-max-width: em-calc(1280) !default;
+
 $gutter-xs: 8px;
 $gutter-sm: 10px;
 $gutter-md: 15px;
