--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,18 +16,20 @@
 		</ul>
 
 		<section class="icon-nav">
-			<li class="icon-nav__item">
-				<a class="icon-nav__link" href="#"><i class="fa fa-phone"></i></a>
-			</li>
-			<li class="icon-nav__item">
-				<a class="icon-nav__link" href="#"><i class="fa fa-envelope"></i></a>
-			</li>
-			<li class="icon-nav__item">
-				<a class="icon-nav__link" href="#"><i class="fa fa-map-marker"></i></a>
-			</li>
-			<li class="icon-nav__item">
-				<a class="icon-nav__link" href="#"><i class="fa fa-search"></i></a>
-			</li>
+			<ul class="icon-nav__list">
+				<li class="icon-nav__item visible--phone">
+					<a class="site-nav__link" href="#"><i class="fa fa-phone fa-lg"></i></a>
+				</li>
+				<li class="icon-nav__item">
+					<a class="site-nav__link" href="#"><i class="fa fa-envelope fa-lg"></i></a>
+				</li>
+				<li class="icon-nav__item">
+					<a class="site-nav__link" href="#"><i class="fa fa-map-marker fa-lg"></i></a>
+				</li>
+				<li class="icon-nav__item">
+					<a class="site-nav__link" href="#"><i class="fa fa-search fa-lg"></i></a>
+				</li>
+			</ul>
 		</section>
 	</div>
 </nav>
