--- a/_src/scss/layout/_site-nav.scss
+++ b/_src/scss/layout/_site-nav.scss
@@ -18,8 +18,10 @@
 	padding: 15px;
 	color: $nav-link-color;
 	font-size: 16px;
-	@include font-weight(regular);
+	font-weight: $font-weight-normal;
 	line-height: 20px;
+
+
 }
 
 .site-nav__close, .site-nav__open {
