--- a/_src/scss/styles.scss
+++ b/_src/scss/styles.scss
@@ -1,6 +1,9 @@
 // Vendors
 @import "vendors/normalize";
 
+// Tools
+@import "tools/mixins";
+
 // Variables
 @import "variables/fonts";
 @import "variables/settings";
@@ -8,7 +11,6 @@
 @import "variables/colors";
 
 // Tools
-@import "tools/mixins";
 
 // Base
 @import "base/page";
